--- a/index.html
+++ b/index.html
@@ -6,8 +6,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Proyecto de Customize Bootstrap</title>
 </head>
-<body class="bg-secondary">
+<body class=".container">
     <h1>Mi primer proyecto usando Bootstrap</h1>
+
+    <div class="dropdown" data-bs-theme="light">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false">
+          Default dropdown
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonLight">
+          <li><a class="dropdown-item active" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Action</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="#">Separated link</a></li>
+        </ul>
+      </div>
+
+      <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            Columna 1
+          </div>
+          <div class="col">
+            Columna 2
+          </div>
+          <div class="col">
+            Columna 3
+          </div>
+        </div>
+      </div>
 
 
 
