--- a/index.html
+++ b/index.html
@@ -7,32 +7,53 @@
     <title>Proyecto de Customize Bootstrap</title>
 </head>
 <body class=".container">
-    <h1>Mi primer proyecto usando Bootstrap</h1>
-
-    <div class="dropdown" data-bs-theme="light">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false">
-          Default dropdown
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonLight">
-          <li><a class="dropdown-item active" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Separated link</a></li>
-        </ul>
-      </div>
-
+    <h3 class="text-center">Mi primer proyecto usando Bootstrap</h3> 
       <div class="container text-center">
         <div class="row">
           <div class="col">
-            Columna 1
+            <div class="dropdown" data-bs-theme="light">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false">
+                Seleccione
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonLight">
+                <li><a class="dropdown-item active" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li>
+              </ul>
+            </div>
           </div>
           <div class="col">
-            Columna 2
+            <div class="dropdown" data-bs-theme="light">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false">
+                Seleccione
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonLight">
+                <li><a class="dropdown-item active" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li>
+              </ul>
+            </div>
           </div>
           <div class="col">
-            Columna 3
+            <div class="dropdown" data-bs-theme="light">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonLight" data-bs-toggle="dropdown" aria-expanded="false">
+                Seleccione
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonLight">
+                <li><a class="dropdown-item active" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
