--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonLight">
                 <li><a class="dropdown-item active" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Acciones</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                 <li><hr class="dropdown-divider"></li>
