--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Separated link</a></li>
-                <h1>Este es un nuevo aporte para este sitio</h1>
+                <li><a class="dropdown-item" href="#">Otro separador</a></li>
               </ul>
             </div>
           </div>
